--- a/my-portfolio/.eslintrc.json
+++ b/my-portfolio/.eslintrc.json
@@ -6,8 +6,7 @@
     "extends": [
         "eslint:recommended",
         "plugin:react/recommended",
-        "plugin:react/jsx-runtime",
-        "airbnb"
+        "plugin:jsx-a11y/recommended",
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -22,7 +21,19 @@
         "@typescript-eslint"
     ],
     "rules": {
-        "react/jsx-filename-extension": [0],
-        "import/extensions": "off"
+        "react/react-in-jsx-scope": "off",
+        "jsx-a11y/accessible-emoji": "off",
+        "react/prop-types": "off",
+        "@typescript-eslint/explicit-function-return-type": "off",
+        "simple-import-sort/imports": "error",
+        "simple-import-sort/exports": "error",
+        "jsx-a11y/anchor-is-valid": [
+          "error",
+          {
+            "components": ["Link"],
+            "specialLink": ["hrefLeft", "hrefRight"],
+            "aspects": ["invalidHref", "preferButton"]
+          }
+        ]
+      }
     }
-}
