--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -8,8 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "i18next": "^21.6.16",
+    "polished": "^4.2.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-i18next": "^11.16.7",
+    "react-icons": "^4.3.1",
+    "react-select": "^5.3.0",
     "react-switch": "^6.0.0",
     "styled-components": "^5.3.5"
   },
